# DirectX12LittleMaster

./: CMakeLists.txt  LICENSE  README.md
VS2019/: .gitignore  DirectX12LittleMaster.sln  DirectX12LittleMaster.vcxproj  DirectX12LittleMaster.vcxproj.filters
include/framework/: object.h
include/gfx/: dxgi_objects.h  gfx_objects.h
include/os/: configure.h  window.h
source/: LittleMasterRenderer.cpp
source/gfx/: dxgi_objects.cpp  gfx_objects.cpp
source/os/: window.cpp
